--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
-        with:
-          java-version: "12.x"
+          with:
+            distribution: "zulu"
+            java-version: "11"
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
